--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -60,6 +60,38 @@ html{
     }
   }
 
+  &.darker{
+    --white: #181A1B;
+    --ghostwhite: #2d3d46;
+    --lightgrey: #1E1F21;
+    --altgrey: #222A2E;
+    --grey: #222A2E;
+    --darkgrey: #cccccc;
+    --lightblack: #cccccc;
+    --black: #ffffff;
+    --green: #0b6e3e;
+    --online: var(--yakyakgreen);
+    --darkgreen: #0f1316;
+    --red: #f44336;
+    --darkred: #ea1c0d;
+    --link: #F9C15C;
+    --tweetbg: #644104;
+    --instagrambg: #333940;
+
+  .listhead,
+  .listhead button,
+  .convhead .name,
+  .controls .button,
+  .convhead .headwrap .optionwrapper > .button,
+  .convadd .button{
+    color: var(--black);
+  }
+
+  .convhead .win-buttons button{
+    background-color: var(--black);
+  }
+}
+
   &.material{
     --white: #202B31;
     --ghostwhite: #2d3d46;
