Use attributes for theme and font size instead of class names.

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -23,12 +23,12 @@ html{
   //
   --headerbarheight: 35px;
 
-  &.blue{
+  &[theme="blue"] {
     --green: #03A9F4;
     --darkgreen: #0286c2;
   }
 
-  &.dark{
+  &[theme="dark"] {
       --white: #1D242A;
       --ghostwhite: #2d3d46;
       --lightgrey: #242d34;
@@ -60,7 +60,7 @@ html{
     }
   }
 
-  &.darker{
+  &[theme="darker"] {
     --white: #181A1B;
     --ghostwhite: #2d3d46;
     --lightgrey: #1E1F21;
@@ -92,7 +92,7 @@ html{
   }
 }
 
-  &.material{
+  &[theme="material"] {
     --white: #202B31;
     --ghostwhite: #2d3d46;
     --lightgrey: #28353B;
@@ -110,7 +110,7 @@ html{
     --instagrambg: #333940;
   }
 
-  &.gruvy{
+  &[theme="gruvy"] {
     --white: #303030;
     --ghostwhite: #458588;
     --lightgrey: #282828;
@@ -141,7 +141,7 @@ html{
       background-color: var(--black);
     }
   }
-  &.pop {
+  &[theme="pop "] {
     --white: #4C4845;
     --ghostwhite: #403B39;
     --lightgrey: #393634;
