--- a/src/ui/css/yakyak/fonts.less
+++ b/src/ui/css/yakyak/fonts.less
@@ -3,23 +3,23 @@ html {
 --emojifont: Roboto, "Helvetica Neue", NotoColorEmoji, 'Segoe UI Emoji', Helvetica, Arial, "Lucida Grande", sans-serif;
 --globalfont: Roboto, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
-  &.x-small {
+  &[font-size="x-small"] {
     --fontsize: 10px;
   }
 
-  &.small {
+  &[font-size="small"] {
     --fontsize: 12px;
   }
 
-  &.medium {
+  &[font-size="medium"] {
     --fontsize: 14px;
   }
 
-  &.large {
+  &[font-size="large"] {
     --fontsize: 16px;
   }
 
-  &.x-large {
+  &[font-size="x-large"] {
     --fontsize: 18px;
   }
 
