Add workaround for google chat attachment only showing as links. Fix clicking attachments not always opening the full image.

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -143,6 +143,22 @@
                 }
                 .attach {
                     margin-top: 4px;
+
+                    a {
+                        display: block;
+                        position: relative;
+
+                        .play_button {
+                            left: 0px;
+                            top: 0px;
+                            right: 0px;
+                            bottom: 0px;
+                            position: absolute;
+                            background-image: url(https://ssl.gstatic.com/dynamite/images/ic_play_black_whitearrow.png);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                        }
+                    }
                 }
                 img {
                     max-height: 350px;
